--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -16,7 +16,7 @@ source:
     - boost-thread.patch  # [osx]
 
 build:
-  number: 3
+  number: 4
   skip: true  # [win or py2k or (linux and py == 37 and c_compiler == 'toolchain_c')]
 
 requirements:
@@ -64,3 +64,4 @@ extra:
   recipe-maintainers:
     - minrk
     - jbweston
+    - jan-janssen
