--- a/.ci_support/osx_64_boost_cpp1.72.0python3.8.____cpython.yaml
+++ b/.ci_support/osx_64_boost_cpp1.72.0python3.8.____cpython.yaml
@@ -1,11 +1,11 @@
 MACOSX_DEPLOYMENT_TARGET:
 - '10.9'
 boost_cpp:
-- '1.72'
+- 1.72.0
 c_compiler:
 - clang
 c_compiler_version:
-- '9'
+- '11'
 channel_sources:
 - conda-forge,defaults
 channel_targets:
@@ -13,17 +13,15 @@ channel_targets:
 cxx_compiler:
 - clangxx
 cxx_compiler_version:
-- '9'
+- '11'
 fortran_compiler:
 - gfortran
 fortran_compiler_version:
-- '7'
+- '9'
 gmp:
 - '6'
 macos_machine:
 - x86_64-apple-darwin13.4.0
-macos_min_version:
-- '10.9'
 mpfr:
 - '4'
 pin_run_as_build:
@@ -37,4 +35,10 @@ pin_run_as_build:
     min_pin: x.x
     max_pin: x.x
 python:
-- '3.8'
+- 3.8.* *_cpython
+target_platform:
+- osx-64
+zip_keys:
+- - c_compiler_version
+  - cxx_compiler_version
+  - fortran_compiler_version
