--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -26,7 +26,7 @@ requirements:
     - {{ compiler('c') }}
     - {{ compiler('cxx') }}
   host:
-    - boost-cpp >=1.74
+    - boost-cpp
     - python
     - pip
     - fenics-dolfin {{ version }}
