Pin fenics-dijitso

--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -30,6 +30,7 @@ requirements:
     - python
     - pip
     - fenics-dolfin =2019.1.0=*_15
+    - fenics-dijitso =2019.1.0=*_15
     - gmp
     - mpfr  # [not (linux and c_compiler == 'toolchain_c')]
     - mpfr 3.*  # [linux and c_compiler == 'toolchain_c']
