--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -37,7 +37,7 @@ requirements:
   run:
     - {{ pin_compatible("boost-cpp", max_pin='x.x.x') }}
     - python
-    - {{ pin_compatible("fenics-dolfin", exact=True) }}
+    - {{ pin_compatible("fenics-dolfin", max_pin='x.x.x') }}
     - gmp
     - mpfr
 
