--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -16,7 +16,7 @@ source:
     - boost-thread.patch  # [osx]
 
 build:
-  number: 5
+  number: 6
   skip: true  # [win or py2k or (linux and py == 37 and c_compiler == 'toolchain_c')]
 
 requirements:
@@ -30,6 +30,7 @@ requirements:
     - python
     - pip
     - fenics-dolfin {{ version }}
+    - {{ mpi }}
     - gmp
     - mpfr  # [not (linux and c_compiler == 'toolchain_c')]
     - mpfr 3.*  # [linux and c_compiler == 'toolchain_c']
