--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -30,7 +30,7 @@ requirements:
     - boost-cpp
     - python
     - pip
-    - fenics-dolfin {{ version }}
+    - fenics-dolfin {{ version }}*_34 
     - gmp
     - mpfr  # [not (linux and c_compiler == 'toolchain_c')]
     - mpfr 3.*  # [linux and c_compiler == 'toolchain_c']
