--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -44,10 +44,11 @@ requirements:
     - mpfr
 
 test:
-  source_files:
-    - test
-  imports:
-    - mshr
+  commands:
+    - export OMPI_MCA_plm=isolated
+    - export OMPI_MCA_rmaps_base_oversubscribe=yes
+    - export OMPI_MCA_btl_vader_single_copy_mechanism=none
+    - python -c "import mshr"
 
 about:
   home: https://bitbucket.org/fenics-project/mshr
