--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -13,7 +13,7 @@ source:
   patches:
     # Link boost_thread on macOS. Doesn't appear to be needed
     # on recent versions (10.12), but seems needed on Travis (Xcode 6.4, currently).
-    - libboost-python-devel-thread.patch  # [osx]
+    - boost-thread.patch  # [osx]
 
 build:
   number: 8
